force-app/main/default/objects/Cotizacion__c/fields/Asignado_A__c.field-meta.xml
<CustomField>
    <fullName>Asignado_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado A</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cotizaciones (Asignado A)</relationshipLabel>
    <relationshipName>Cotizaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>