force-app/main/default/objects/Cotizacion__c/fields/Elaborado_Por__c.field-meta.xml
<CustomField>
    <fullName>Elaborado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elaborado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Elaborado Por</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>