force-app/main/default/objects/Cotizacion__c/fields/Fecha_Finalizado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Finalizado__c</fullName>
    <label>Fecha Finalizado</label>
    <type>Date</type>
</CustomField>