force-app/main/default/objects/Cotizacion__c/fields/Nombre_del_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Proveedor__c</fullName>
    <label>Nombre del Proveedor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>